--- a/public/work.html
+++ b/public/work.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-md-4 col-xs-4 col-sm-4">
         <a href="/">
-          <img src="logo.png">
+          <img src="/img/logo.png">
         </a>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-8">
@@ -63,7 +63,7 @@
 <div class="container-fluid portfolio-container text-center text-white" style="background-color: #FF2C00">
   <div class="row">
     <div class="col-sm-6 offset-sm-3">
-      <img src="/portfolio/maxyoungracing.png" class="img-fluid img-portfolio">
+      <img src="/img/portfolio/maxyoungracing.png" class="img-fluid img-portfolio">
       <h3>Max Young Racing</h3>
       <p>Bespoke CMS / UI</p>
     </div>
@@ -74,7 +74,7 @@
 <div class="container-fluid portfolio-container text-center text-black" style="background-color: #FFF">
   <div class="row">
     <div class="col-sm-6 offset-sm-3">
-      <img src="/portfolio/kemcontractingltd.png" class="img-fluid img-portfolio" style="border-color: #000">
+      <img src="/img/portfolio/kemcontractingltd.png" class="img-fluid img-portfolio" style="border-color: #000">
       <h3>KEM Contracting Ltd</h3>
       <p>Bespoke CMS / UI</p>
     </div>
@@ -84,7 +84,7 @@
 <div class="container-fluid portfolio-container text-center text-black" style="background-color: #FFB600">
   <div class="row">
     <div class="col-sm-6 offset-sm-3">
-      <img src="/portfolio/getequifit.png" class="img-fluid img-portfolio">
+      <img src="/img/portfolio/getequifit.png" class="img-fluid img-portfolio">
       <h3>GetEquifit</h3>
       <p>Online Payments / SEO / UI</p>
     </div>
@@ -94,7 +94,7 @@
 <div class="container-fluid portfolio-container text-center text-white" style="background-color: #0088BC">
   <div class="row">
     <div class="col-sm-6 offset-sm-3">
-      <img src="portfolio/dodderhill.png" class="img-fluid img-portfolio">
+      <img src="/img/portfolio/dodderhill.png" class="img-fluid img-portfolio">
       <h3>Dodderhill Equestrian</h3>
       <p>Bespoke CMS / UI</p>
     </div>
@@ -104,7 +104,7 @@
 <div class="container-fluid portfolio-container text-center text-black" style="background-color: #FFF">
   <div class="row">
     <div class="col-sm-6 offset-sm-3">
-      <img src="portfolio/draytonmanorhotel.png" class="img-fluid img-portfolio">
+      <img src="/img/portfolio/draytonmanorhotel.png" class="img-fluid img-portfolio">
       <h3>Drayton Manor Hotel</h3>
       <p>Bespoke CMS / Booking System Integration / UI</p>
     </div>
