--- a/public/contact.html
+++ b/public/contact.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-md-4 col-xs-4 col-sm-4">
         <a href="/">
-          <img src="logo.png">
+          <img src="/img/logo.png">
         </a>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-8">
