--- a/public/contact.html
+++ b/public/contact.html
@@ -1,73 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Alex Mills - a web developer</title>
-  <link rel="stylesheet" href="/css/application.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta charset="utf-8">
+    <title>Alex Mills - a web developer</title>
+    <link rel="stylesheet" href="/css/application.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
 </head>
 <body>
 <header id="home-top" class="nav-top nav-fixed headroom headroom--pinned nav-root headroom--top bg-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-xs-4 col-sm-4">
-        <a href="/">
-          <img src="/img/logo.png">
-        </a>
-      </div>
-      <div class="col-md-8 col-sm-8 col-xs-8">
-        <nav class="navbar navbar-expand-lg navbar-light navbar-right">
-          <div class="container">
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="icon-bar top-bar"></span>
-              <span class="icon-bar middle-bar"></span>
-              <span class="icon-bar bottom-bar"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="topNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a href="/" class="nav-link">
-                </li>
-                <li class="nav-item">
-                  <a href="/work.html" class="nav-link">
-                </li>
-                <li class="nav-item">
-                  <a href="/contact.html" class="nav-link">
-                </li>
-              </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-xs-4 col-sm-4">
+                <a href="/">
+                    <img src="/img/logo.png">
+                </a>
             </div>
-          </div>
-        </nav>
-      </div>
+            <div class="col-md-8 col-sm-8 col-xs-8">
+                <nav class="navbar navbar-expand-lg navbar-light navbar-right">
+                    <div class="container">
+                        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                                data-target="#topNav" aria-controls="topNav" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                            <span class="icon-bar top-bar"></span>
+                            <span class="icon-bar middle-bar"></span>
+                            <span class="icon-bar bottom-bar"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="topNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a href="/" class="nav-link">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/work.html" class="nav-link">Work</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/contact.html" class="nav-link">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
     </div>
-  </div>
 </header>
 <div class="container hero-container">
-  <div class="row">
-    <div class="col-md-6 offset-md-3 col-sm-8 offset-sm-2 text-center">
-      <h1>Get in touch</h1>
+    <div class="row">
+        <div class="col-md-6 offset-md-3 col-sm-8 offset-sm-2 text-center">
+            <h1>Get in touch</h1>
+        </div>
     </div>
-  </div>
 </div>
 
 <div class="container text-center">
-  <div class="row">
-    <div class="col-sm-4">
-      <i class="fas fa-envelope fa-3x"></i>
-      <h3>Email</h3>
-      <p>alex@asdfx.us</p>
+    <div class="row">
+        <div class="col-sm-4">
+            <i class="fas fa-envelope fa-3x"></i>
+            <h3>Email</h3>
+            <p>alex@asdfx.us</p>
+        </div>
+        <div class="col-sm-4">
+            <i class="fas fa-phone fa-3x"></i>
+            <h3>Phone</h3>
+            <p>01299 888039</p>
+        </div>
+        <div class="col-sm-4">
+            <i class="fa fa-map-marker fa-3x"></i>
+            <h3>Location</h3>
+            <p>Droitwich, Worcestershire, UK.</p>
+        </div>
     </div>
-    <div class="col-sm-4">
-      <i class="fas fa-phone fa-3x"></i>
-      <h3>Phone</h3>
-      <p>01299 888039</p>
-    </div>
-    <div class="col-sm-4">
-      <i class="fa fa-map-marker fa-3x"></i>
-      <h3>Location</h3>
-      <p>Droitwich, Worcestershire, UK.</p>
-    </div>
-  </div>
 </div>
 </body>
 </html>
