--- a/public/contact.html
+++ b/public/contact.html
@@ -55,17 +55,23 @@
 
 <div class="container text-center">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <i class="fas fa-envelope fa-3x"></i>
             <h3>Email</h3>
             <p>alex@asdfx.us</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
+            <i class="fab fa-github fa-3x"></i>
+            <h3>GitHub</h3>
+            <p>agjmills</p>
+        </div>
+
+        <div class="col-sm-3">
             <i class="fas fa-phone fa-3x"></i>
             <h3>Phone</h3>
             <p>01299 888039</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <i class="fa fa-map-marker fa-3x"></i>
             <h3>Location</h3>
             <p>Droitwich, Worcestershire, UK.</p>
