--- a/public/work.html
+++ b/public/work.html
@@ -86,7 +86,7 @@
 <div class="container-fluid portfolio-container text-center text-black" style="background-color: #FFB600">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            <img src="/img/portfolio/getequifit.jpg" class="img-fluid img-portfolio">
+            <img src="/img/portfolio/getequifit.png" class="img-fluid img-portfolio">
             <h3>GetEquifit</h3>
             <p>Online Payments / SEO / UI</p>
         </div>
