--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="/css/application.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <header id="home-top" class="nav-top nav-fixed headroom headroom--pinned nav-root headroom--top bg-light">
