--- a/public/contact.html
+++ b/public/contact.html
@@ -80,6 +80,6 @@
         </div>
     </div>
 </div>
-<script href="/js/application.js" type="text/javascript"></script>
+<script src="/js/application.js" type="text/javascript"></script>
 </body>
 </html>
