--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,6 @@
         </div>
     </div>
 </div>
-<script href="/js/application.js" type="text/javascript"></script>
+<script src="/js/application.js" type="text/javascript"></script>
 </body>
 </html>
