--- a/public/work.html
+++ b/public/work.html
@@ -64,6 +64,16 @@
 </div>
 
 
+<div class="container-fluid portfolio-container text-center black" style="background-color: #FFB600">
+    <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+            <img src="/img/portfolio/dodderhill-ecommerce.jpg" class="img-fluid img-portfolio">
+            <h3>Dodderhill Equestrian</h3>
+            <p>E-Commerce Ticketing Platform</p>
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid portfolio-container text-center text-white" style="background-color: #FF2C00">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
