--- a/public/work.html
+++ b/public/work.html
@@ -63,6 +63,16 @@
     </div>
 </div>
 
+<div class="container-fluid portfolio-container text-center black" style="background-color: #0088BC">
+    <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+            <img src="/img/portfolio/riding-safari-assocation.jpg" class="img-fluid img-portfolio">
+            <h3>Riding Safari Assocation</h3>
+            <p>Bespoke CMS &amp; Brochure Website</p>
+        </div>
+    </div>
+</div>
+
 
 <div class="container-fluid portfolio-container text-center black" style="background-color: #FFB600">
     <div class="row">
