fixed image url and added white text

--- a/public/work.html
+++ b/public/work.html
@@ -63,10 +63,10 @@
     </div>
 </div>
 
-<div class="container-fluid portfolio-container text-center black" style="background-color: #0088BC">
+<div class="container-fluid portfolio-container text-center black text-white" style="background-color: #0088BC">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            <img src="/img/portfolio/riding-safari-assocation.jpg" class="img-fluid img-portfolio">
+            <img src="/img/portfolio/riding-safari-assocation.png" class="img-fluid img-portfolio">
             <h3>Riding Safari Assocation</h3>
             <p>Bespoke CMS &amp; Brochure Website</p>
         </div>
