replaced images with 1920x1080 images

--- a/public/work.html
+++ b/public/work.html
@@ -68,7 +68,19 @@
         <div class="col-sm-6 offset-sm-3">
             <img src="/img/portfolio/riding-safari-assocation.png" class="img-fluid img-portfolio">
             <h3>Riding Safari Assocation</h3>
+	    <p><a href="https://ridingsafariassociation.com" target="_blank">https://ridingsafariassociation.com</a>
             <p>Bespoke CMS &amp; Brochure Website</p>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid portfolio-container text-center text-black" style="background-color: #FFF">
+    <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+            <img src="/img/portfolio/natural-skin-care.png" class="img-fluid img-portfolio">
+            <h3>Elegance Natural Skin Care</h3>
+	    <p><a href="https://natural-skin-care.com" target="_blank">https://natural-skin-care.com</a>
+            <p>Bespoke CMS / E-commerce</p>
         </div>
     </div>
 </div>
@@ -77,8 +89,9 @@
 <div class="container-fluid portfolio-container text-center black" style="background-color: #FFB600">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            <img src="/img/portfolio/dodderhill-ecommerce.jpg" class="img-fluid img-portfolio">
+            <img src="/img/portfolio/dodderhill-ecommerce.png" class="img-fluid img-portfolio">
             <h3>Dodderhill Equestrian</h3>
+	    <p><a href="https://dodderhill-equestrian.com/events" target="_blank">https://dodderhill-equestrian.com/events</a>
             <p>E-Commerce Ticketing Platform</p>
         </div>
     </div>
@@ -89,6 +102,7 @@
         <div class="col-sm-6 offset-sm-3">
             <img src="/img/portfolio/maxyoungracing.jpg" class="img-fluid img-portfolio">
             <h3>Max Young Racing</h3>
+	    <p><a href="https://maxyoungracing.co.uk" target="_blank">https://maxyoungracing.co.uk</a>
             <p>Bespoke CMS / UI</p>
         </div>
     </div>
@@ -98,8 +112,9 @@
 <div class="container-fluid portfolio-container text-center text-black" style="background-color: #FFF">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            <img src="/img/portfolio/kemcontractingltd.jpg" class="img-fluid img-portfolio" style="border-color: #000">
+            <img src="/img/portfolio/kemcontractingltd.png" class="img-fluid img-portfolio" style="border-color: #000">
             <h3>KEM Contracting Ltd</h3>
+	    <p><a href="https://kemcontractingltd.co.uk" target="_blank">https://kemcontractingltd.co.uk</a>
             <p>Bespoke CMS / UI</p>
         </div>
     </div>
@@ -110,6 +125,7 @@
         <div class="col-sm-6 offset-sm-3">
             <img src="/img/portfolio/getequifit.png" class="img-fluid img-portfolio">
             <h3>GetEquifit</h3>
+	    <p><a href="https://getequifit.co.uk" target="_blank">https://getequifit.co.uk</a>
             <p>Online Payments / SEO / UI</p>
         </div>
     </div>
@@ -118,22 +134,14 @@
 <div class="container-fluid portfolio-container text-center text-white" style="background-color: #0088BC">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            <img src="/img/portfolio/dodderhill.jpg" class="img-fluid img-portfolio">
+            <img src="/img/portfolio/dodderhill.png" class="img-fluid img-portfolio">
             <h3>Dodderhill Equestrian</h3>
+	    <p><a href="https://dodderhill-equestrian.com" target="_blank">https://dodderhill-equestrian.com</a>
             <p>Bespoke CMS / UI</p>
         </div>
     </div>
 </div>
 
-<div class="container-fluid portfolio-container text-center text-black" style="background-color: #FFF">
-    <div class="row">
-        <div class="col-sm-6 offset-sm-3">
-            <img src="/img/portfolio/draytonmanorhotel.jpg" class="img-fluid img-portfolio">
-            <h3>Drayton Manor Hotel</h3>
-            <p>Bespoke CMS / Booking System Integration / UI</p>
-        </div>
-    </div>
-</div>
 <script src="/js/application.js" type="text/javascript"></script>
 </body>
 </html>
