--- a/public/work.html
+++ b/public/work.html
@@ -100,7 +100,7 @@
 <div class="container-fluid portfolio-container text-center text-white" style="background-color: #FF2C00">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            <img src="/img/portfolio/maxyoungracing.jpg" class="img-fluid img-portfolio">
+            <img src="/img/portfolio/maxyoungracing.png" class="img-fluid img-portfolio">
             <h3>Max Young Racing</h3>
 	    <p><a href="https://maxyoungracing.co.uk" target="_blank">https://maxyoungracing.co.uk</a>
             <p>Bespoke CMS / UI</p>
