added bauns and devops

--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,7 @@
     <div class="container about-container">
         <div class="row">
             <div class="col-md-6 offset-md-3 text-center">
-                <p>I'm a web developer based in Worcestershire, England. I have a passion for code and love to create
-                    for web
-                    and mobile devices.</p>
+                <p>I'm a web developer and devops consultant based in Worcestershire, England. I have a passion for code and love to create for web and mobile devices, as well as providing secure, stable, and scalable systems</p>
             </div>
         </div>
     </div>
