--- a/public/work.html
+++ b/public/work.html
@@ -63,6 +63,18 @@
     </div>
 </div>
 
+
+<div class="container-fluid portfolio-container text-center black text-white" style="background-color: #FF2C00">
+    <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+            <img src="/img/portfolio/bauns.png" class="img-fluid img-portfolio">
+            <h3>Bauns</h3>
+            <p><a href="https://bauns.net" target="_blank">https://bauns.net</a>
+            <p>Amazon SES Bounce Deliverability Dashboard</p>
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid portfolio-container text-center black text-white" style="background-color: #0088BC">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
