changed email address

--- a/public/contact.html
+++ b/public/contact.html
@@ -60,7 +60,7 @@
         <div class="col-sm-3">
             <i class="fas fa-envelope fa-3x"></i>
             <h3>Email</h3>
-            <p>alex@asdfx.us</p>
+            <p>alex@alexmills.uk</p>
         </div>
         <div class="col-sm-3">
             <i class="fab fa-github fa-3x"></i>
