--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-md-4 offset-md-4 col-sm-8 offset-sm-2 text-center">
                 <h1>I'm Alex</h1>
-                <p>a web developer.</p>
+                <p>a web developer!</p>
             </div>
         </div>
     </div>
