--- a/public/blog.html
+++ b/public/blog.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Alex Mills - a web developer</title>
+    <title>Alex Mills</title>
     <link rel="stylesheet" href="/css/application.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -44,38 +43,15 @@
         </div>
     </div>
 </header>
-<div class="container hero-container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3 col-sm-8 offset-sm-2 text-center">
-            <h1>Get in touch</h1>
+<div class="welcome--index">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 offset-md-4 col-sm-8 offset-sm-2 text-center">
+                <p>coming soon</p>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="container text-center">
-    <div class="row">
-        <div class="col-sm-3">
-            <i class="fas fa-envelope fa-3x"></i>
-            <h3>Email</h3>
-            <p>alex@alexmills.uk</p>
-        </div>
-        <div class="col-sm-3">
-            <i class="fab fa-github fa-3x"></i>
-            <h3>GitHub</h3>
-            <p>agjmills</p>
-        </div>
-
-        <div class="col-sm-3">
-            <i class="fas fa-phone fa-3x"></i>
-            <h3>Phone</h3>
-            <p>01299 888039</p>
-        </div>
-        <div class="col-sm-3">
-            <i class="fa fa-map-marker fa-3x"></i>
-            <h3>Location</h3>
-            <p>Droitwich, Worcestershire, UK.</p>
-        </div>
-    </div>
 </div>
 <script src="/js/application.js" type="text/javascript"></script>
 </body>
